sbj/90.build-pipeline.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-eventlistener-jp-fep-account-login
  annotations:
    openshift.io/host.generated: 'true'
  namespace: jp-fep-account
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: eventlistener-jp-fep-account-login
spec:
  host: >-
    el-eventlistener-jp-fep-account-login-jp-fep-account.apps.uibfepdev.ui-bk.com
  to:
    kind: Service
    name: el-eventlistener-jp-fep-account-login
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
